--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - ./images:/app/client/public/images
       - ./uploads:/app/uploads
       - ./logs:/app/logs
-      - ./librechat.yml:/app/librechat.yml
+      - ./librechat.yaml:/app/librechat.yaml
     networks:
       - dokploy-network
   mongodb:
