--- a/librechat.yaml
+++ b/librechat.yaml
@@ -224,7 +224,7 @@ endpoints:
   #   capabilities: ["execute_code", "file_search", "actions", "tools"]
   custom:
     - name: "gemproxy"
-      label: "Gem Proxy"
+      apiKey: '${GEMPROXY_KEY}'
       description: "General purpose assistant"
       # No 'group' field - appears as standalone item at top level (not nested)
       baseURL: 'https://gemproxy.mezeet.com/v1/'
@@ -233,6 +233,7 @@ endpoints:
         default: ['gemini-2.0-flash', 'gemini-2.5-flash', 'gemini-2.5-pro']
         # Fetch option: Set to true to fetch models from API.
         fetch: true # Defaults to false.
+      modelDisplayLabel: 'GemProxy'
   
     # Groq Example
     - name: 'groq'
