--- a/docker-compose.override.yml.example
+++ b/docker-compose.override.yml.example
@@ -21,14 +21,14 @@
 
 # ---------------------------------------------------
 
-# services:
+services:
 
-# # USE LIBRECHAT CONFIG FILE
-#   api:
-#     volumes:
-#     - type: bind
-#       source: ./librechat.yaml
-#       target: /app/librechat.yaml
+# USE LIBRECHAT CONFIG FILE
+  api:
+    volumes:
+    - type: bind
+      source: ./librechat.yaml
+      target: /app/librechat.yaml
 
 # # LOCAL BUILD
 #   api:
