--- a/librechat.yaml
+++ b/librechat.yaml
@@ -245,6 +245,16 @@ endpoints:
       forcePrompt: false
       modelDisplayLabel: "Ollama"
       
+    - name: "gemproxy"
+      apiKey: '${GEMPROXY_KEY}'
+      baseURL: 'https://gemproxy.mezeet.com/v1/'
+      models:
+        default: ['gemini-2.0-flash', 'gemini-2.5-flash', 'gemini-2.5-pro']
+        fetch: true
+      iconURL: "/assets/ollama.png"
+      addParams:
+        stream: true
+        
     # Groq Example
     - name: 'groq'
       apiKey: '${GROQ_API_KEY}'
@@ -310,15 +320,12 @@ endpoints:
     - name: 'OpenRouter'
       # For `apiKey` and `baseURL`, you can use environment variables that you define.
       # recommended environment variables:
-      # apiKey: '${OPENROUTER_KEY}'
-      apiKey: '${GEMPROXY_KEY}'
-      # baseURL: 'https://openrouter.ai/api/v1'
-      baseURL: 'https://gemproxy.mezeet.com/v1/'
-      # headers:
-      #     x-librechat-body-parentmessageid: '{{LIBRECHAT_BODY_PARENTMESSAGEID}}'
+      apiKey: '${OPENROUTER_KEY}'
+      baseURL: 'https://openrouter.ai/api/v1'
+      headers:
+          x-librechat-body-parentmessageid: '{{LIBRECHAT_BODY_PARENTMESSAGEID}}'
       models:
-        # default: ['meta-llama/llama-3-70b-instruct']
-        default: ['gemini-2.0-flash', 'gemini-2.5-flash', 'gemini-2.5-pro']
+        default: ['meta-llama/llama-3-70b-instruct']
         fetch: true
       titleConvo: true
       titleModel: 'meta-llama/llama-3-70b-instruct'
