--- a/librechat.yaml
+++ b/librechat.yaml
@@ -447,6 +447,7 @@ webSearch:
 #   serperApiKey: '${SERPER_API_KEY}'
   searxngInstanceUrl: '${SEARXNG_INSTANCE_URL}'
 #   searxngApiKey: '${SEARXNG_API_KEY}'
+  searchProvider: "searxng" # Options: "serper", "searxng"
 #   
 #   # Content scrapers
 #   firecrawlApiKey: '${FIRECRAWL_API_KEY}'
